k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-deployment
  labels:
    app: auth


spec:
  replicas: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1


  selector:
    matchLabels:
      app: auth


  template:

    metadata:
      labels:
        app: auth


    spec:

      containers:

      - name: auth

        image: auth:latest

        imagePullPolicy: IfNotPresent


        ports:

        - containerPort: 3000
          name: auth-port



        resources:

          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"



        readinessProbe:

          httpGet:
            path: /
            port: 3000

          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 5



        livenessProbe:

          httpGet:
            path: /
            port: 3000

          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5



      restartPolicy: Always
